--- a/resource/aalto-xml/pom.xml
+++ b/resource/aalto-xml/pom.xml
@@ -75,6 +75,7 @@ org.xml.sax, org.xml.sax.ext, org.xml.sax.helpers</osgi.import>
 
   <build>
     <plugins>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.13</version>
